<resources>
    <string name="app_name">TOP MOVIES</string>
    <string name="popular">Popular</string>
    <string name="now">NOW</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="popularity_text">Popularity</string>
    <string name="release_date_Text">Release Date</string>
    <string name="explore_the_crew">explore the crew</string>
    <string name="w">ww</string>
    <string name="details">Details</string>
    <string name="crew">Crew</string>
    <string name="top_movies">Top Movies</string>
    <string name="search">Search</string>
    <string name="click_back_again_to_exit">"click back again to exit"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description">Enter your name, email id and password</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="please_wait">Please Wait</string>
    <string name="my_profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="saved">Saved</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update">UPDATE</string>
    <string name="movies">Movies</string>
    <string name="search_movie_and_tv_shows">     Search movie and TvShows…</string>
    <string name="saved_all_user">Saved all user</string>
</resources>