<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/movies"
            android:icon="@drawable/ic_baseline_movie_24"
            android:title="@string/movies" />

        <item
            android:id="@+id/saved"
            android:icon="@drawable/ic_baseline_save_24"
            android:title="@string/saved" />


        <item
            android:id="@+id/savedAllUser"
            android:icon="@drawable/ic_baseline_save_24"
            android:title="@string/saved_all_user" />

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/sign_out" />
    </group>

</menu>